<resources>
    <string name="app_name">EvalSv</string>
    <string name="logo">Logo</string>
    <string name="evalsv">EvalSV</string>
    <string name="correo">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Inicia Sesión</string>
    <string name="registrate">Regístrate</string>
    <string name="registrarse_frase">¿No tiene cuenta?</string>
    <string name="login_frase">¿Ya tienes cuenta?</string>
    <string name="confirmar_contrasenna">Confirmar contraseña</string>
    <string name="registrar_estudiantes">Registrar estudiantes</string>
    <string name="gestionar_estudiantes">Gestionar estudiantes</string>
    <string name="gestionar_notas">Gestionar Notas</string>
    <string name="nombre">Nombre</string>
    <string name="eliminar">Eliminar</string>
    <string name="edad">Edad</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="no_hay_estudiantes_registrados">No hay estudiantes registrados</string>
    <string name="no_hay_notas_registradas">No hay notas registradas</string>

    <string-array name="grados_array">
        <item>Seleccione un grado</item>
        <item>Primero</item>
        <item>Segundo</item>
        <item>Tercero</item>
        <item>Cuarto</item>
        <item>Quinto</item>
    </string-array>

    <string-array name="materias_array">
        <item>Seleccione una materia</item>
        <item>Matemáticas</item>
        <item>Lengua</item>
        <item>Ciencias</item>
        <item>Historia</item>
    </string-array>
</resources>